--- a/app/shirokepuJSONtool/shirokepuJSONtool.html
+++ b/app/shirokepuJSONtool/shirokepuJSONtool.html
@@ -36,10 +36,10 @@
 				<div class="sp">各々先頭行の値から+1</div>
 				発言者: 
 				<div class="sp">
-					<input type="radio" name="member" required="required" value="0"> うた<br>
-					<input type="radio" name="member" required="required" value="1"> えりんぎ<br>
-					<input type="radio" name="member" required="required" value="2"> しろる<br>
-					<input type="radio" name="member" required="required" value="3"> 紅茶<br>
+					<label><input type="radio" name="member" required="required" value="0"> うた</label><br>
+					<label><input type="radio" name="member" required="required" value="1"> えりんぎ</label><br>
+					<label><input type="radio" name="member" required="required" value="2"> しろる</label><br>
+					<label><input type="radio" name="member" required="required" value="3"> 紅茶</label><br>
 				</div>
 				日付:
 				<div  class="sp">
@@ -47,10 +47,10 @@
 				</div>
 				タグ:
 				<div class="sp">
-					<input type="checkbox" name="tag" required="required" value="0"> 誤字<br>
-					<input type="checkbox" name="tag" required="required" value="1"> おつうわ<br>
-					<input type="checkbox" name="tag" required="required" value="2"> チャット<br>
-					<input type="checkbox" name="tag" required="required" value="3"> ツイート<br>
+					<label><input type="checkbox" name="tag" required="required" value="0"> 誤字</label><br>
+					<label><input type="checkbox" name="tag" required="required" value="1"> おつうわ</label><br>
+					<label><input type="checkbox" name="tag" required="required" value="2"> チャット</label><br>
+					<label><input type="checkbox" name="tag" required="required" value="3"> ツイート</label><br>
 				</div>
 				発言内容: 
 				<div class="sp">
