--- a/app/shirokepuJSONtool/t/shirokepuJSONtool.html
+++ b/app/shirokepuJSONtool/t/shirokepuJSONtool.html
@@ -62,7 +62,8 @@
 				</div>
 				画像: 
 				<div class="sp">
-					<input id="img" type="file" accept='image/*' onchange="previewImage(this);">
+					<input id="img" type="file" accept='image/*' onchange="previewImage(this);">&nbsp;
+					<input type="button" value="リセット" onclick="imgReset()">
 					<p>
 						<img id="preview" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
 					</p>
