--- a/app/shirokepuJSONtool/t/shirokepuJSONtool.html
+++ b/app/shirokepuJSONtool/t/shirokepuJSONtool.html
@@ -58,7 +58,7 @@
 				<div class="sp">
 					<input id="data" type="text" style="font-family: sans-serif;" required="required"><br>
 				</div>
-				説明:
+				説明:(HTML要素使用可能)
 				<div class="sp">
 					<textarea id="desc" rows="5" cols="40" style="font-size: 80%;font-family: sans-serif;"></textarea><br>
 				</div>
