--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<li>kfpedia</li>
 							<li>sky</li>
 							<li><a href="https://utareyu.github.io/app/app.html#JavaScript">JavaScript</a></li>
-							<li><a href="https://utareyu.github.io/shirocom/index.html">しろけぷ会話まとめ(beta)</a></li>
+							<li><a href="https://utareyu.github.io/shirocom/index.html">しろけぷ会話まとめ</a></li>
 						</ul>
 					</section>
 					<section>
