--- a/app/shirokepuJSONtool/test.html
+++ b/app/shirokepuJSONtool/test.html
@@ -1,3 +1,10 @@
+<!--
+ ■■■■■ ■■■■■  ■■■  ■■■■■
+   ■   ■     ■       ■
+   ■   ■■■■■  ■■■    ■
+   ■   ■         ■   ■
+   ■   ■■■■■  ■■■    ■
+-->
 <!DOCTYPE html>
 <html lang="jp">
 
@@ -10,7 +17,7 @@
 	<link href="https://utareyu.github.io/img/utareyu.ico" rel="icon">
 	<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 	<link href="https://utareyu.github.io/css/prettify.css" rel="stylesheet">
-	<script src="JSONconv.js"></script>
+	<script src="test.js"></script>
 	<title>test</title>
 </head>
 <style>
@@ -23,6 +30,7 @@
 </style>
 
 <body>
+	<p>TEST</p>
 	<header>
 		<div class="container">
 			<h1>発言まとめJSON入力補助ツール</h1>
