--- a/app/shirokepuJSONtool/test.html
+++ b/app/shirokepuJSONtool/test.html
@@ -73,7 +73,7 @@
 				<span>画像:</span>
 				<div class="sp">
 					<input id="img" type="file" accept='image/*' onchange="previewImage(this);" value="aa">
-					<input type="button" value="リセット" onclick="document.getElementById('img').value =null ;getElementById('preview').src='data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=='">
+					<input type="button" value="リセット" onclick="previewreset()">
 					<p>
 						<img id="preview" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
 					</p>
