--- a/app/app.html
+++ b/app/app.html
@@ -20,7 +20,7 @@
 		<h3 id="JavaScript">JavaScript</h3>
 		<ul>
 			<li><a href="https://utareyu.github.io/JavaScript/day02/number-guessing-game.html">数当てゲーム</a></li>
-			<li><a href="https://utareyu.github.io/app/shirokepuJSONtool/shirokepuJSONtool.html">発言まとめJSON入力補助ツール</a></li>
+			<li><a href="https://utareyu.github.io/app/shirokepuJSONtool">発言まとめJSON入力補助ツール</a></li>
 			<!-- 椅子年齢 -->
 			<!-- BMMatch -->
 			<!-- パレート図 -->
