--- a/app/shirokepuJSONtool/test.html
+++ b/app/shirokepuJSONtool/test.html
@@ -87,7 +87,7 @@
 				</div>
 				<h2>画像のアップロードについて</h2>
 				<p class="sp">
-					<img src="Screenshot_273.png"><br>ここ押して選択<br>
+					<img src="Screenshot_273.png"><br><img src="Screenshot_274.png"><br>ここ押して画像を選択<br>選択できたら下のほうの緑のボタン[Commit changes]を押す<br>
 					<a href="https://github.com/McbeEringi/shirokepu/tree/main/img/photos">アップロード先</a>
 				</p>
 			</div>
