--- a/app/shirokepuJSONtool/test.html
+++ b/app/shirokepuJSONtool/test.html
@@ -7,102 +7,98 @@
 -->
 <!DOCTYPE html>
 <html lang="jp">
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<script src="https://utareyu.github.io/themeColor.js"></script>
+		<link href="https://utareyu.github.io/css/main.css" rel="stylesheet">
+		<link href="https://utareyu.github.io/img/utareyu.ico" rel="icon">
+		<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
+		<link href="https://utareyu.github.io/css/prettify.css" rel="stylesheet">
+		<script src="test.js"></script>
+		<title>発言まとめJSON入力補助</title>
+	</head>
+	<style>
+		input:invalid {
+		border: solid 1px red;
+		}
+		.sp>*:not(span):not(pre):not(code){
+			margin: 0 0 1em 3em;
+			line-height: 1.5em;
+		}
+	</style>
 
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="https://utareyu.github.io/themeColor.js"></script>
-	<link href="https://utareyu.github.io/css/main.css" rel="stylesheet">
-	<link href="https://utareyu.github.io/img/utareyu.ico" rel="icon">
-	<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
-	<link href="https://utareyu.github.io/css/prettify.css" rel="stylesheet">
-	<script src="test.js"></script>
-	<title>発言まとめJSON入力補助</title>
-</head>
-<style>
-	.sp{
-		margin: 0 0 1em 3em;
-	}
-	input:invalid {
-  border: solid 1px red;
-	}
-</style>
-
-<body>
-	<p>TEST</p>
-	<header>
-		<div class="container">
-			<h1>発言まとめJSON入力補助ツール</h1>
-		</div>
-	</header>
-	<main>
-		<div style="line-height: 1.5em;">
-			<h2>入力欄</h2>
-			<div>
-				<span>番号:</span>
-				<div id="max" class="sp">
-					<div>document.getElementById("max").textContent=(Math.max(...x["data"].map((p) => p.no))+1)</div>
-				</div>
-				<span id="smember">発言者:</span>
+	<body>
+		<p>TEST</p>
+		<header>
+			<div class="container">
+				<h1>発言まとめJSON入力補助ツール</h1>
+			</div>
+		</header>
+		<main>
+			<section>
+				<h2>入力欄</h2>
 				<div class="sp">
-					<label><input type="radio" name="member" required="required" value="0"> うた</label><br>
-					<label><input type="radio" name="member" required="required" value="1"> えりんぎ</label><br>
-					<label><input type="radio" name="member" required="required" value="2"> しろる</label><br>
-					<label><input type="radio" name="member" required="required" value="3"> 紅茶</label><br>
+					<span>番号:</span>
+					<div id="max">
+						<div>document.getElementById("max").textContent=(Math.max(...x["data"].map((p) => p.no))+1)</div>
+					</div>
+					<span id="smember">発言者:</span>
+					<div>
+						<label><input type="radio" name="member" required="required" value="0"> うた</label><br>
+						<label><input type="radio" name="member" required="required" value="1"> えりんぎ</label><br>
+						<label><input type="radio" name="member" required="required" value="2"> しろる</label><br>
+						<label><input type="radio" name="member" required="required" value="3"> 紅茶</label><br>
+					</div>
+					<span id="sdate">日付:</span>
+					<div >
+						<input id="date" type="date" required="required"><br>
+					</div>
+					<span id="stag">タグ:</span>
+					<div>
+						<label><input type="checkbox" name="tag" required="required" value="0"> 誤字</label><br>
+						<label><input type="checkbox" name="tag" required="required" value="1"> おつうわ</label><br>
+						<label><input type="checkbox" name="tag" required="required" value="2"> チャット</label><br>
+						<label><input type="checkbox" name="tag" required="required" value="3"> ツイート</label><br>
+					</div>
+					<span id="sdata">発言内容:</span>
+					<div>
+						<input id="data" type="text" style="font-family: sans-serif;" required="required"><br>
+					</div>
+					<span>説明:(HTML要素使用可能)</span>
+					<div>
+						<textarea id="desc" rows="5" cols="40" style="font-size: 80%;font-family: sans-serif;"></textarea><br>
+					</div>
+					<span>画像:</span>
+					<div>
+						<input id="img" type="file" accept='image/*' onchange="previewImage(this);" value="."><input type="button" value="リセット" onclick="previewreset()">
+						<span id="fsize" style="font-size: 14px;color: aliceblue;"></span>
+						<p>
+							<img id="preview" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
+						</p>
+					</div>
 				</div>
-				<span id="sdate">日付:</span>
-				<div  class="sp">
-					<input id="date" type="date" required="required"><br>
+				<div>
+					<input id="convbtn" type="button" value="変換"  onclick="run()" style="font-size: 120%;">
+					<span id="warn" style="color: red;"></span>
 				</div>
-				<span id="stag">タグ:</span>
-				<div class="sp">
-					<label><input type="checkbox" name="tag" required="required" value="0"> 誤字</label><br>
-					<label><input type="checkbox" name="tag" required="required" value="1"> おつうわ</label><br>
-					<label><input type="checkbox" name="tag" required="required" value="2"> チャット</label><br>
-					<label><input type="checkbox" name="tag" required="required" value="3"> ツイート</label><br>
-				</div>
-				<span id="sdata">発言内容:</span>
-				<div class="sp">
-					<input id="data" type="text" style="font-family: sans-serif;" required="required"><br>
-				</div>
-				<span>説明:(HTML要素使用可能)</span>
-				<div class="sp">
-					<textarea id="desc" rows="5" cols="40" style="font-size: 80%;font-family: sans-serif;"></textarea><br>
-				</div>
-				<span>画像:</span>
-				<div class="sp">
-					<input id="img" type="file" accept='image/*' onchange="previewImage(this);" value="."><input type="button" value="リセット" onclick="previewreset()">
-					<span id="fsize" style="font-size: 14px;color: aliceblue;"></span>
-					<p>
-						<img id="preview" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
-					</p>
-				</div>
-				<input id="convbtn" type="button" value="変換"  onclick="run()">
-				<span id="warn" style="color: red;"></span>
 				<h2>結果</h2>
 				<div class="sp">
-					<textarea id="result" rows="7" cols="40"></textarea><br>
-					<input id="copybtn" type="button" value="コピーして編集ページに移動" onclick="copynew()">
-				</div>
-				<h2>画像のアップロードについて</h2>
-				<p class="sp">
-					<img src="Screenshot_273.png"><br><img src="Screenshot_274.png"><br>ここ押して画像を選択<br>選択できたら下のほうの緑のボタン[Commit changes]を押す<br>
-					<a href="https://github.com/McbeEringi/shirokepu/tree/main/img/photos">アップロード先</a>
-				</p>
-			</div>
-		</div>
-		<section>
-			<code>入力例</code>
-			<pre class="prettyprint lang-json" style="margin:1em 0; width: 90%;">
+					<div>
+						<textarea id="result" rows="7" cols="40"></textarea><br>
+						<input id="copybtn" type="button" value="コピーして編集ページに移動" onclick="copynew()"><br><br>
+					</div>
+					<code>入力例</code>
+					<pre class="prettyprint lang-json" style="margin:1em 0; width: 90%;">
 "data":[ //←ここにカーソル合わせて貼り付け
 	{"no":nnn, "member":0~3, "date":yymmdd, "tag":[0~3], "data":"XXX", "desc":"XXX"}, //先頭行
 	{"no":nnn, "member":0~3, "date":yymmdd, "tag":[0~3], "data":"XXX", "desc":"XXX"},
 	{"no":nnn, "member":0~3, "date":yymmdd, "tag":[0~3], "data":"XXX"}, //desc(説明)はなくてもよい
 //...
 </pre>
-			<code>使いそうなHTML要素</code>
-			<pre class="prettyprint lang-json" style="margin:1em 0; width: 90%;">
+				<code>使いそうなHTML要素</code>
+				<pre class="prettyprint lang-json" style="margin:1em 0; width: 90%;">
 改行 : &lt;br&gt;
 画像 : &lt;img src="[ファイル名]" width=[幅(200くらい)]&gt;
 段落 : &lt;p&gt;文字&lt;/p&gt;
@@ -111,13 +107,22 @@
 <i>斜体</i> : &lt;i&gt;文字&lt;/i&gt;
 <u>下線</u> : &lt;u&gt;文字&lt;/u&gt;
 </pre>
-		</section>
-	</main>
-	<p style="text-align:center"><a href="https://utareyu.github.io/index.html">home</a></p>
-	<footer>
-		<p>(c)2021~ utareyu</p>
-	</footer>
-	<script>img.value=fsize.textContent=result.value="";</script>
-</body>
-
+				</div>
+			</section>
+			<section>
+				<h2>画像のアップロードについて</h2>
+				<div class="sp">
+				<p>
+					<img src="Screenshot_273.png"><br><img src="Screenshot_274.png"><br>ここ押して画像を選択<br>選択できたら下のほうの緑のボタン[Commit changes]を押す<br>
+					<a href="https://github.com/McbeEringi/shirokepu/tree/main/img/photos">アップロード先</a>
+				</p>
+				</div>
+			</section>
+		</main>
+		<p style="text-align:center"><a href="https://utareyu.github.io/index.html">home</a></p>
+		<footer>
+			<p>(c)2021~ utareyu</p>
+		</footer>
+		<script>img.value=fsize.textContent=result.value="";</script>
+	</body>
 </html>
