--- a/app/shirokepuJSONtool/test.html
+++ b/app/shirokepuJSONtool/test.html
@@ -1,9 +1,9 @@
 <!--
- ■■■■■ ■■■■■  ■■■  ■■■■■
-   ■   ■     ■       ■
-   ■   ■■■■■  ■■■    ■
-   ■   ■         ■   ■
-   ■   ■■■■■  ■■■    ■
+ ■ ■ ■ ■ ■  ■ ■ ■ ■ ■     ■ ■ ■    ■ ■ ■ ■ ■ 
+     ■      ■           ■              ■
+     ■      ■ ■ ■ ■ ■     ■ ■ ■        ■
+     ■      ■                   ■      ■
+     ■      ■ ■ ■ ■ ■     ■ ■ ■        ■
 -->
 <!DOCTYPE html>
 <html lang="jp">
@@ -41,9 +41,7 @@
 				<h2>入力欄</h2>
 				<div class="sp">
 					<span>番号:</span>
-					<div id="max">
-						<div>document.getElementById("max").textContent=(Math.max(...x["data"].map((p) => p.no))+1)</div>
-					</div>
+					<div id="max">max.textContent=(Math.max(...x["data"].map((p) => p.no))+1</div>
 					<span id="smember">発言者:</span>
 					<div>
 						<label><input type="radio" name="member" required="required" value="0"> うた</label><br>
