--- a/app/shirokepuJSONtool/index.html
+++ b/app/shirokepuJSONtool/index.html
@@ -33,7 +33,7 @@
 				<h2>入力欄</h2>
 				<div class="sp">
 					<span>番号:</span>
-					<div id="max">document.getElementById("max").textContent=(Math.max(...x["data"].map((p) => p.no))+1)</div>
+					<div id="max">max.textContent=(Math.max(...x["data"].map((p) => p.no))+1</div>
 					<span id="smember">発言者:</span>
 					<div>
 						<label><input type="radio" name="member" required="required" value="0"> うた</label><br>
