--- a/app/shirocomJSONtool/test.html
+++ b/app/shirocomJSONtool/test.html
@@ -12,7 +12,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://utareyu.github.io/shirocom/Discord.css" rel="stylesheet">
+	<!-- <link href="https://utareyu.github.io/shirocom/Discord.css" rel="stylesheet"> -->
+	<link href="../Discord.css" rel="stylesheet">
 	<link href="https://utareyu.github.io/img/utareyu.ico" rel="icon">
 	<script src="test.js" async></script>
 	<title>会話まとめJSON入力補助ツール</title>
@@ -42,7 +43,6 @@
 							<input class="add" type="text" required="required" placeholder="投稿内容" oninput="fitwidth(this)" style="font-weight: 100;width:14em;">
 						</div>
 						<div class="container act">
-							<div id="a0_0" name="action0" class="s">💥 +</div>
 							<button id="action0" name="action0" class="add btn s" onclick="addAct(this)">😀 +</button>
 						</div>
 					</div>
