--- a/app/shirokepuJSONtool/test.html
+++ b/app/shirokepuJSONtool/test.html
@@ -104,6 +104,7 @@
 <strike>取消</strike> : &lt;strike&gt;文字&lt;/strike&gt;
 <i>斜体</i> : &lt;i&gt;文字&lt;/i&gt;
 <u>下線</u> : &lt;u&gt;文字&lt;/u&gt;
+<a>リンク</a> : &lt;a href="[URL]"&gt;&lt;/a&gt;
 </pre>
 				</div>
 			</section>
