--- a/app/shirocomJSONtool/test.html
+++ b/app/shirocomJSONtool/test.html
@@ -55,94 +55,16 @@
 					</div>
 				</div>
 				<button id="addp" class="add btn" onclick="addPost()">投稿を追加</button>
-				<button id="addp" class="add btn" onclick="run()">確定</button>
+				<button id="run" class="add btn" onclick="run()">確定</button>
+				<p id="runp" style="color: red;"></p>
 
-
+				<br>
 				<div id="" class="container post">
-					<div class="container ico"><img class="ico" src="https://utareyu.github.io/shirocom/ico\m1.png"></div>
+					<div class="container ico"><img class="ico" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="></div>
 					<div class="container content">
-						<div class="member">えりんぎ</div>
-						<div class="data"><a href="https://www.amazon.co.jp/%E3%82%A8%E3%83%93%E3%82%B9-%E3%83%97%E3%83%A9%E3%82%A4%E3%83%A0%E3%83%91%E3%83%83%E3%82%AF%E3%82%B9%E3%82%BF%E3%83%83%E3%83%95-%E7%B5%B6%E5%93%81%E3%83%AC%E3%83%B3%E3%82%B8%E3%81%A7%E3%83%91%E3%82%B9%E3%82%BF-12-8%C3%9728-3%C3%979-5cm-PPS-6220/dp/B07319313V/ref=asc_df_B07319313V/?tag=jpgo-22&amp;linkCode=df0&amp;hvadid=266433737255&amp;hvpos=&amp;hvnetw=g&amp;hvrand=17423431115912516146&amp;hvpone=&amp;hvptwo=&amp;hvqmt=&amp;hvdev=c&amp;hvdvcmdl=&amp;hvlocint=&amp;hvlocphy=1009250&amp;hvtargid=pla-439615532576&amp;psc=1&amp;th=1&amp;psc=1">
-							https://www.amazon.co.jp…15532576&amp;psc=1&amp;th=1&amp;psc=1
-						</a>
-						</div>
-					</div>
-				</div>
-				<div id="" class="container post">
-					<div class="container ico"><img class="ico" src="https://utareyu.github.io/shirocom/ico\m2.png"></div>
-					<div class="container content">
-						<div class="member">しろる</div>
+						<div class="member">結果</div>
 						<div class="data">
-							<p>シーズンのパスタです</p>
-						</div>
-					</div>
-				</div>
-				<div id="" class="container post">
-					<div class="container ico"><img class="ico" src="https://utareyu.github.io/shirocom/ico\m0.png"></div>
-					<div class="container content">
-						<div class="member">うた</div>
-						<div class="data"><a 	href="https://www.amazon.co.jp/%E3%82%B7%E3%83%BC%E3%82%BA%E3%83%8B%E3%83%B3%E3%82%B0-%E3%83%9A%E3%83%9A%E3%83%AD%E3%83%B3%E3%83%81%E3%83%BC%E3%83%8E-%E3%83%9C%E3%83%88%E3%83%AB-53g%C3%975%E5%80%8B/dp/B00930SRJO/ref=asc_df_B00930SRJO/?tag=jpgo-22&amp;linkCode=df0&amp;hvadid=208261973943&amp;hvpos=&amp;hvnetw=g&amp;hvrand=1796662562913624771&amp;hvpone=&amp;hvptwo=&amp;hvqmt=&amp;hvdev=m&amp;hvdvcmdl=&amp;hvlocint=&amp;hvlocphy=1009220&amp;hvtargid=pla-340010781788&amp;psc=1&amp;th=1&amp;psc=1">
-							https://www.amazon.co.jp…10781788&amp;psc=1&amp;th=1&amp;psc=1
-						</a>
-						</div>
-					</div>
-				</div>
-				<div id="" class="container post">
-					<div class="container ico"><img class="ico" src="https://utareyu.github.io/shirocom/ico\m2.png"></div>
-					<div class="container content">
-						<div class="member">しろる</div>
-						<div class="data">
-							<p>シーズン！！パス！！！！</p>
-						</div>
-					</div>
-				</div>
-				<div id="" class="container post">
-					<div class="container ico"><img class="ico" src="https://utareyu.github.io/shirocom/ico\m1.png"></div>
-					<div class="container content">
-						<div class="member">えりんぎ</div>
-						<div class="data">
-							<p>🍝🍝🍝</p>
-						</div>
-					</div>
-				</div>
-				<div id="" class="container post">
-					<div class="container ico"><img class="ico" src="https://utareyu.github.io/shirocom/ico\m2.png"></div>
-					<div class="container content">
-						<div class="member">しろる</div>
-						<div class="data">
-							<p>金ならあります</p>
-						</div>
-					</div>
-				</div>
-				<div id="" class="container post">
-					<div class="container ico"><img class="ico" src="https://utareyu.github.io/shirocom/ico\m1.png"></div>
-					<div class="container content">
-						<div class="member">えりんぎ</div>
-						<div class="data">
-							<p>🍝🍝🍝😋😋😋😋</p>
-						</div>
-					</div>
-				</div>
-				<div id="" class="container post">
-					<div class="container ico"><img class="ico" src="https://utareyu.github.io/shirocom/ico\m0.png"></div>
-					<div class="container content">
-						<div class="member">うた</div>
-						<div class="data"><a	href="https://www.nippn.co.jp/products/pasta/ohmy_premium/detail/1194339_1632.html">
-							https://www.nippn.co.jp…/1194339_1632.html
-						</a>
-						</div>
-					</div>
-				</div>
-				<div id="" class="container post">
-					<div class="container ico"><img class="ico" src="https://utareyu.github.io/shirocom/ico\m2.png"></div>
-					<div class="container content">
-						<div class="member">しろる</div>
-						<div class="data">
-							<p>かね！！！！！！<br>財力！！！！！！<br>財力は私もあるんです！！！！！！</p>
-						</div>
-						<div class="container act">
-							<div id="a90" class="s">🍝 3<span class="balloon"><span style="font-size: 60px;display: block;">🍝</span>3人が反応しました</span></div>
-							<div id="a91" class="s">😋 3<span class="balloon"><span style="font-size: 60px;display: block;">😋</span>3人が反応しました</span></div>
+							<textarea id="rst" style="width:max-content;"></textarea>
 						</div>
 					</div>
 				</div>
